Added final stages - Package - Deploy_Test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - test
   - analyze
   - package
-  - publish
+  - deploy
 
 
 # Default Image can be overriden per project here
@@ -69,3 +69,53 @@ analyze:
   script:
     - mvn sonar:sonar -Dsonar.projectKey=$sonar_project -Dsonar.qualitygate.wait=true
   allow_failure: true
+
+package:
+  stage: package
+  only:
+    refs:
+      - main
+  tags:
+    - docker
+  dependencies:
+    - test
+  cache:
+    paths:
+      - $maven_packages_cache
+  artifacts:
+    name: $CI_JOB_NAME-$CI_COMMIT_REF_SLUG-CI_COMMIT_SHORT_SHA
+    expire_in: 1 week
+    paths:
+      - "target/*.war"
+  script:
+    - mvn package
+
+deploy_test:
+  stage: deploy
+  tags:
+    - shell
+  dependencies:
+    - package
+  environment:
+    name: test
+    action: start
+    url: http://localhost:8080/ConnectFour
+    on_stop: stop_test
+  when: manual
+  script:
+    - docker rm -f tomcat
+    - docker image rm -f connect-four
+    - docker build -t connect-four .
+    - docker run --rm -d --name tomcat -p 8080:8080 connect-four
+
+stop_test:
+  stage: deploy
+  tags:
+    - shell
+  environment:
+    name: test
+    action: stop
+  when: manual
+  script:
+    - docker rm -f tomcat
+    - docker image rm -f connect-four
