--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,3 +11,22 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build with Maven
         run: mvn compile
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact
+          path: ~/target
+      - uses: actions/cache@v4
+        with:
+          path: ~/target
+          key: build-cache
+
+  test:
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: build-artifact
+          path: target/*
+      - name: Test with Maven
+        run: mvn test
