--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,7 @@ jobs:
           key: build-cache
 
   test:
+    needs: build
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
