--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: ~/target
-          key: build-cache
+          key: build-cache-${{ github.run_id }}
+          restore-keys: build-cache-
 
   test:
     needs: build
@@ -27,7 +28,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
-          name: build-artifact
+          name: build-cache-${{ github.run_id }}
           path: target/*
       - name: Test with Maven
         run: mvn test
