--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,10 +14,10 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: build-artifact
-          path: ~/target
+          path: target
       - uses: actions/cache@v4
         with:
-          path: ~/target
+          path: target
           key: build-cache-${{ github.run_id }}
           restore-keys: build-cache-
 
