--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,7 @@ jobs:
           restore-keys: build-cache-
       - name: Test with Maven
         run: mvn test
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact
+          path: target/site/jacoco
