--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,5 +35,5 @@ jobs:
         run: mvn test
       - uses: actions/upload-artifact@v4
         with:
-          name: build-artifact
+          name: test-artifact
           path: target/site/jacoco
