Implemented the rest of the stages, still needs to be tested on notebook with the setup runner and docker containers

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+
+env:
+  maven_packages_cache: ".m2/repository"
+  MAVEN_OPTS: "-Dmaven.repo.local=./$maven_packages_cache"
+  sonar_project: "ConnectFour"
+
 jobs:
   build:
     runs-on: self-hosted
@@ -17,7 +23,7 @@ jobs:
           path: target
       - uses: actions/cache@v4
         with:
-          path: target
+          path: $maven_packages_cache
           key: build-cache-${{ github.run_id }}
           restore-keys: build-cache-
 
@@ -28,7 +34,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
         with:
-          path: target
+          path: $maven_packages_cache
           key: build-cache-${{ github.run_id }}
           restore-keys: build-cache-
       - name: Test with Maven
@@ -37,3 +43,48 @@ jobs:
         with:
           name: test-artifact
           path: target/site/jacoco
+
+  analyze:
+    needs: test
+    runs-on: self-hosted
+    continue-on-error: true
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v4
+        with:
+          path: $maven_packages_cache
+          key: build-cache-${{ github.run_id }}
+          restore-keys: build-cache-
+      - name: Analyze Code using Sonar
+        run: mvn sonar:sonar -Dsonar.projectKey=$sonar_project -Dsonar.qualitygate.wait=true
+
+  package:
+    needs: test
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v4
+        with:
+          path: $maven_packages_cache
+          key: build-cache-${{ github.run_id }}
+          restore-keys: build-cache-
+      - name: Packaging ConnectFour Project using Maven
+        run: mvn package
+      - uses: actions/upload-artifact@v4
+        with:
+          name: package-artifact
+          path: target/*.war
+
+  deploy_test:
+    needs: package
+    runs-on: self-hosted
+    environment:
+      name: test
+      url: http://localhost:8080/ConnectFour
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4.3.0
+        with:
+          name: package-artifact
+      - name: Move to webapp folder
+        run: mv target/ConnectFour.war /usr/local/tomcat/webapps/ConnectFour.war
