Github Workflow SonarQube Integration lt. Anleitung

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
 env:
   maven_packages_cache: ".m2/repository"
   MAVEN_OPTS: "-Dmaven.repo.local=./$maven_packages_cache"
-  sonar_project: "ConnectFour"
+  sonar_project: "ConnectFour_Github"
 
 jobs:
   build:
@@ -56,6 +56,9 @@ jobs:
           key: build-cache-${{ github.run_id }}
           restore-keys: build-cache-
       - name: Analyze Code using Sonar
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: mvn sonar:sonar -Dsonar.projectKey=$sonar_project -Dsonar.qualitygate.wait=true
 
   package:
@@ -87,4 +90,4 @@ jobs:
         with:
           name: package-artifact
       - name: Move to webapp folder
-        run: mv target/ConnectFour.war /usr/local/tomcat/webapps/ConnectFour.war
+        run: mv /home/github-runner/actions-runner/_work/spw4_github_runner_testing/spw4_github_runner_testing/ConnectFour.war /usr/local/tomcat/webapps/ConnectFour.war
