--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,6 +55,9 @@ jobs:
           path: $maven_packages_cache
           key: build-cache-${{ github.run_id }}
           restore-keys: build-cache-
+      - uses: actions/download-artifact@v4.3.0
+        with:
+          name: build-artifact
       - name: Analyze Code using Sonar
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -62,7 +65,7 @@ jobs:
         run: mvn sonar:sonar -Dsonar.projectKey=$sonar_project -Dsonar.qualitygate.wait=true
 
   package:
-    needs: test
+    needs: analyze
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
