--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,6 +58,7 @@ jobs:
       - uses: actions/download-artifact@v4.3.0
         with:
           name: build-artifact
+          path: ~/target
       - name: Analyze Code using Sonar
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
